Add recipe page and link with index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <a href="./recipes/cold_beet_soup.html" target="_blank">Cold Beet Soup</a>
     </body>
 </html>
