Add recipe "Cold Beet Soup" and appropriate image

--- a/recipes/cold_beet_soup.html
+++ b/recipes/cold_beet_soup.html
@@ -6,5 +6,45 @@
     </head>
     <body>
         <h1>Cold Beet Soup</h1>
+        <img src="../img/cold_beet_soup.jpg" alt="a bowl of cold beet soup">
+
+        <!--Description section-->
+        <h2>Description</h2>
+        <p>You will experience the real taste of Lithuania cuisine if you taste this easy-to-cook soup, especially popular 
+            in Lithuania - „šaltibarčiai“ (cold beetroot soup, pink soup)! The soup has a shocking bright pink color due to 
+            the natural beetroot juice and an incredibly fresh taste due to the most important ingredient in the cold soup 
+            - kefir, recognized by nutritionists as one of the healthiest products in the world.
+        </p>
+
+        <p>
+            Carlo Petrini, an Italian founder and leader of the famous Slow Food movement, has called Lithuanian 
+            cold beetroot soup „the world's most aesthetic cold soup“. 
+        </p>
+
+        <!--Ingredient section-->
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Beetroots, boiled or marinated, 500 g</li>
+            <li>Cucumbers, 200 g</li>
+            <li>Dill, 20 g</li>
+            <li>Green onions, 30 g</li>
+            <li>Kefir, 1 l</li>
+            <li>Milk, 200 ml</li>
+            <li>Boiled eggs, 2 pcs.</li>
+            <li>Sour cream, 100 ml</li>
+        </ul>
+
+        <!--Steps section-->
+        <h2>Steps</h2>
+        <ol>
+            <li>Finely chop the dill and the green onions;</li>
+            <li>Cut an unpeeled cucumber into small cubes;</li>
+            <li>Grate the boiled or marinated beetroots into the pot together with the greens;</li>
+            <li>Add salt and sour cream, pour in the kefir and mix everything together;</li>
+            <li>Chop up the boiled eggs and add to the soup;</li>
+            <li>Water the soup down with milk, squeeze in some lemon juice if you like it sour;</li>
+            <li>Serve the Cold Pink Soup with boiled or fried potatoes sprinkled with dill.</li>
+        </ol>
+
     </body>
 </html>
