Add zeppelin recipe
Add separate page for recipe, fill page with required information,
add photo of zeppelins and link index.html to new page.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/cold_beet_soup.html" target="_blank">Cold Beet Soup</a>
+        <ul>
+            <li><a href="./recipes/cold_beet_soup.html" target="_blank">Cold Beet Soup</a></li>
+            <li><a href="./recipes/zeppelin.html" target="_blank">Zeppelins</a></li>
+        </ul>
     </body>
 </html>
