--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="./recipes/cold_beet_soup.html" target="_blank">Cold Beet Soup</a></li>
             <li><a href="./recipes/zeppelin.html" target="_blank">Zeppelins</a></li>
+            <li><a href="./recipes/pasta.html" target="_blank">Pasta</a></li>
         </ul>
     </body>
 </html>
