Add css file and link with all pages

--- a/recipes/cold_beet_soup.html
+++ b/recipes/cold_beet_soup.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Cold Beet Soup</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <h1>Cold Beet Soup</h1>
